--- a/app/interfaces/templates/worker_profile.html
+++ b/app/interfaces/templates/worker_profile.html
@@ -76,6 +76,10 @@
                 
                 <div class="profile-info-grid">
                     <div class="info-item">
+                        <label>Empresa</label>
+                        <p>{{ worker.empresa }}</p>
+                    </div>
+                    <div class="info-item">
                         <label>Teléfono</label>
                         <p>{{ worker.phone }}</p>
                     </div>
