--- a/app/interfaces/templates/dashboard.html
+++ b/app/interfaces/templates/dashboard.html
@@ -90,6 +90,18 @@
             </div>
         </div>
 
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"> Obtener trabajador por id</h5>
+                <input type= "number" id="trabajador-id" class="form-control" placeholder="Ingresa el ID del trabajador">
+                <button id="obtener-trabajador-btn" class="btn btn-primary">Obtener</button>
+            </div>
+            <div id="info-trabajador" class="mt-3">
+                <p><strong>Nombre:</strong> <span id="trabajador-nombre"></span></p>
+                <p><strong>Correo Electrónico:</strong> <span id="trabajador-email"></span></p>
+                <p><strong>Telefono:</strong> <span id="trabajador-telefono"></span></p>
+            </div>
+        </div>
         <!--fin pruebas-->
 
         <div class="metrics-grid">
