--- a/app/interfaces/templates/layout/base.html
+++ b/app/interfaces/templates/layout/base.html
@@ -14,6 +14,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
+    <!-- CRSF Token para seguridad -->
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+    
     <!-- CSS base -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     
